[gd_scene load_steps=13 format=3 uid="uid://bhpew12gj1k16"]

[ext_resource type="Script" path="res://Game/Bosses/The Star/Scripts/TheStar.gd" id="1_nqwj5"]
[ext_resource type="PackedScene" uid="uid://f82jftruq2wd" path="res://Game/Bosses/The Star/vertical_member.tscn" id="2_3y313"]
[ext_resource type="PackedScene" uid="uid://x0kk1jvwp5e3" path="res://Game/Bosses/The Star/x_member.tscn" id="3_2386m"]
[ext_resource type="Texture2D" uid="uid://cu8wi40tva7vm" path="res://Assets/Bosses/The Star/star_center.png" id="4_du8cr"]
[ext_resource type="Script" path="res://Components/Damage/Hurt.gd" id="5_88ntx"]
[ext_resource type="Script" path="res://Components/Stats/Stats.gd" id="5_wsf4h"]
[ext_resource type="Script" path="res://Components/Damage/Hitbox.gd" id="6_sqm3f"]
[ext_resource type="Script" path="res://Components/Damage/Hurtbox.gd" id="7_qranm"]
[ext_resource type="Script" path="res://Components/Effects/destroyed_effect.gd" id="9_awr7d"]
[ext_resource type="Script" path="res://Components/Spawners/Spawn.gd" id="10_40xm8"]
[ext_resource type="PackedScene" uid="uid://bkcb672ohnlf3" path="res://Resources/Visual/Explosions/explosion_veffect.tscn" id="11_gqek6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gt4cg"]
radius = 24.0

[node name="TheStar" type="CharacterBody2D"]
script = ExtResource("1_nqwj5")

[node name="Diagonal" type="Node2D" parent="."]

[node name="X" parent="Diagonal" instance=ExtResource("3_2386m")]

[node name="X2" parent="Diagonal" instance=ExtResource("3_2386m")]
rotation = 1.57079

[node name="X3" parent="Diagonal" instance=ExtResource("3_2386m")]
rotation = -3.14159

[node name="X4" parent="Diagonal" instance=ExtResource("3_2386m")]
rotation = -1.57079

[node name="Vertical" type="Node2D" parent="."]

[node name="VLeft" parent="Vertical" instance=ExtResource("2_3y313")]

[node name="VUp" parent="Vertical" instance=ExtResource("2_3y313")]
rotation = 1.5708

[node name="VRight" parent="Vertical" instance=ExtResource("2_3y313")]
rotation = -3.14159

[node name="VDown" parent="Vertical" instance=ExtResource("2_3y313")]
rotation = -1.57079

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_du8cr")

[node name="AtkTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AtkCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Stats" type="Node" parent="."]
script = ExtResource("5_wsf4h")
health = 120

[node name="Hurt" type="Node" parent="." node_paths=PackedStringArray("stats", "hurtbox")]
script = ExtResource("5_88ntx")
stats = NodePath("../Stats")
hurtbox = NodePath("../Hurtbox")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("6_sqm3f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_gt4cg")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("7_qranm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_gt4cg")

[node name="DestroyedEffect" type="Node" parent="." node_paths=PackedStringArray("actor", "stats", "dest_ef_spawner")]
script = ExtResource("9_awr7d")
actor = NodePath("..")
stats = NodePath("../Stats")
dest_ef_spawner = NodePath("Spawner")

[node name="Spawner" type="Node2D" parent="DestroyedEffect"]
script = ExtResource("10_40xm8")
scene = ExtResource("11_gqek6")

[connection signal="timeout" from="AtkCooldownTimer" to="." method="_on_atk_cooldown_timer_timeout"]
